# labctrl-node

./: .gitignore  CMakeLists.txt  create_admin.js  index.js  index.mjs  next.config.js  package.json
addon/: CMakeLists.txt  addon.cpp  parse.cpp  parse.h
apis/: add_source.js  all_users.js  change_password.js  check_token.js  heartbeat.js  invite.js  login.js  logout.js  register.js  remove_user.js  request_approval.js  reset_password.js  set_default_page.js  set_flags.js  trusted.js  user.js
cmake/: FindNode.cmake  deploy_next.sh  production.yml.in
components/: BoolField.js  ChangePassword.js  CheckAnonymous.js  CheckLogin.js  DataWidget.js  DemoWidget.js  Global.js  Login.js  MainSidebar.js  NameField.js  NotifyMenu.js  NumberField.js  RedirectIn.js  SingleField.js  SourceWidgets.js  Wrapper.js
components/zynq/: Add.js  Clock.js  ClockField.js  Config.js  DDS.js  DDSAmpField.js  DDSFreqField.js  DDSNameField.js  DDSPhaseField.js  Seq.js  SeqDecorator.js  SeqTextArea.js  StatusField.js  TTL.js  TTLField.js
conf/: production.yml
data/: CMakeLists.txt  labctrl-node.nginx  labctrl-node.service.in  labctrl-node.sysusers.in  labctrl-node.tmpfiles.in
deb/: conffiles.in
lib/: account.js  api.js  api_client.js  crypto.js  crypto_client.js  event.js  sleep.js  socket.js  socket_client.js  utils.js
pages/: _app.js  _document.js  add.js  admin.js  change-password.js  clock.js  config.js  dds.js  demo.js  devices.js  index.js  login.js  lost-password.js  profile.js  register.js  seq.js  ttl.js  verify.js
pages/s/[type]/: [id].js  add.js
pages/s/[type]/[id]/: [pg].js  config.js
public/css/: main.css
public/html/: index.html
server/: api.js  config.js  crypto.js  db.js  demo_source.js  email.js  meta_source.js  server.js  socket.js  socket_manager.js  source_db.js  url.js  user.js  user_session.js  zmq_utils.js  zynq.js
tests/: CMakeLists.txt  recreate_testdb.js  recreate_testuser.js  runtests.js  socket_manager.js  test_server.js  test_server.mjs  user.js  zynq.js
tests/conf/: default.yml  default.yml.in  test_user.yml  test_user.yml.in
